{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 11,
  "lineage": "af745da1-c6d1-2576-c68f-f0aea8043bfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "projekt_2_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414209194151:internet-gateway/igw-09642c78475de5357",
            "id": "igw-09642c78475de5357",
            "owner_id": "414209194151",
            "tags": {
              "Name": "Projekt 2 internet gateway"
            },
            "tags_all": {
              "Name": "Projekt 2 internet gateway"
            },
            "vpc_id": "vpc-06c1df18e36e24166"
          },
          "dependencies": [
            "aws_vpc.projekt_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "projekt_2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414209194151:route-table/rtb-03c548ed1046c86d6",
            "id": "rtb-03c548ed1046c86d6",
            "owner_id": "414209194151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09642c78475de5357",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Projekt 2 route table"
            },
            "tags_all": {
              "Name": "Projekt 2 route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c1df18e36e24166"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.projekt_2_internet_gateway",
            "aws_vpc.projekt_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "projekt_2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0129b07bac300c6a6",
            "route_table_id": "rtb-03c548ed1046c86d6",
            "subnet_id": "subnet-04090203101fb37f7"
          },
          "dependencies": [
            "aws_internet_gateway.projekt_2_internet_gateway",
            "aws_route_table.projekt_2_route_table",
            "aws_subnet.projekt_2_subnet",
            "aws_vpc.projekt_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "projekt_2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414209194151:security-group/sg-0359e8869c6b6ff0c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0359e8869c6b6ff0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "BackendAuth",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240602232133995500000001",
            "name_prefix": "terraform-",
            "owner_id": "414209194151",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae097e4ea49d0239"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "projekt_2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414209194151:subnet/subnet-04090203101fb37f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04090203101fb37f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414209194151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Projekt 2 subnet"
            },
            "tags_all": {
              "Name": "Projekt 2 subnet"
            },
            "vpc_id": "vpc-06c1df18e36e24166"
          },
          "dependencies": [
            "aws_vpc.projekt_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "projekt_2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414209194151:vpc/vpc-06c1df18e36e24166",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010c56d9bbb2dc303",
            "default_route_table_id": "rtb-086a62a0b34384e50",
            "default_security_group_id": "sg-063d069ffe4fa7541",
            "dhcp_options_id": "dopt-09774d7f9b9da72f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c1df18e36e24166",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086a62a0b34384e50",
            "owner_id": "414209194151",
            "tags": {
              "Name": "Projekt 2 VPC"
            },
            "tags_all": {
              "Name": "Projekt 2 VPC"
            }
          }
        }
      ]
    }
  ]
}